@@ -1,0 +1,26 @@
+<h1>海譜VS閔熙珍！金錢交易、惡意意圖、專輯銷量爭議，誰在說謊？韓國娛樂圈內鬥升級</h1>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ktfFG-o0_Fk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<p>海譜與前ADOR CEO 閔熙珍的衝突持續升級，雙方就另一輪指控展開交鋒。</p>
+<p>據悉，閔熙珍在採訪中透露，海譜曾在5月份提出以她離開公司為條件，向她提供金錢。閔熙珍表示，她拒絕了這個提議，因為金錢不是她的目標。</p>
+<p>海譜迅速否認了這些指控，稱從未提出過和解協議，提供金錢讓閔熙珍離開公司。海譜的一位官員重申了他們的新聞聲明，表示該公司永遠不會在公開爭議中提出和解協議。</p>
+<p>閔熙珍的公關機構Macoll Consulting Group無法確認海譜是否通過閔熙珍的律師提供了金錢。該機構的一位官員表示，前任CEO親自處理了某些部分，他們沒有安排採訪。</p>
+<p>閔熙珍還批評了海譜的內部審計，該審計是為了調查她在4月份試圖控制ADOR管理層的行為而進行的。她將審計描述為“衝動的情緒”驅動，並聲稱它是“基於虛假信息的非法行為”。</p>
+<p><ul></p>
+  <li>海譜否認提出和解協議，提供金錢讓閔熙珍離開公司</li>  <li>閔熙珍批評海譜的內部審計，稱其為“衝動的情緒”驅動</li>  <li>雙方就另一輪指控展開交鋒</li><p></ul>海譜與閔熙珍之爭</p>
+<p>海譜反駁稱，審計是根據內部和外部報告啟動的。調查結果顯示，閔熙珍和副CEO一直在尋找破壞公司的方法，並在一段時間內一直在與潛在投資者會面，具有惡意意圖。</p>
+<p>海譜聲明中提到，閔熙珍和副CEO曾經說過「沒有人能夠觸碰我們」、「我們最終將會脫離海譜」和「我們應該利用NewJeans成員的母親尚未與海譜簽約的事實」等話，並且還有證據表明他們與潛在投資者會面具有惡意意圖。</p>
+<p>閔熙珍還指責海譜低估了NewJeans在日本的成就。海譜曾在7月18日告訴當地記者，該女子團體的日本首張專輯《Supernatural》只賣出了50,000張。閔熙珍質疑：“NewJeans甚至獲得了金唱片認證，這是授予在日本銷售超過100,000張的藝人的獎項。怎麼可能在前一天只賣出了50,000張？”</p>
+<p>海譜澄清說，它只是糾正了一篇文章的錯誤，該文章聲稱NewJeans在日本銷售了1.02萬張專輯。海譜解釋說，它向記者提供了基於公開的Oricon榜單數據的實際銷售數字。金唱片認證是基於出貨數量，而不是實際銷售數量。</p>
+<p><table></p>
+<p><tr></p>
+    <th>專輯名稱</th>    <th>銷售數量</th><p></tr></p>
+<p><tr></p>
+    <td>Supernatural</td>    <td>50,000張</td><p></tr></p>
+<p></table></p>
+<p><ul></p>
+  <li>海譜聲稱閔熙珍和副CEO具有惡意意圖</li>  <li>閔熙珍指責海譜低估NewJeans在日本的成就</li>  <li>海譜澄清銷售數量</li><p></ul></p>
+<h2>韓國流行音樂產業的專輯銷量與出貨銷量</h2><p>在韓國流行音樂產業中，專輯銷量是指消費者實際購買的數量，而出貨銷量則是指分發給零售商但尚未售出的專輯數量。</p><p>請提供更多文章內容，以便我進一步處理。</p>
+
+<p>資料來源： Korea Herald</p>
